[package]
name = "embassy-preempt-driver"
version = "0.1.0"
edition = "2024"

[dependencies]
stm32-metapac = { git = "https://github.com/embassy-rs/stm32-data-generated", tag = "stm32-data-e0cfd165fd8fffaa0df66a35eeca83b228496645", features = ["metadata"]}

[features]
default = ["stm32f401re"]
stm32f401re = [ "stm32-metapac/stm32f401re" ]