[package]
name = "embassy-preempt-executor"
version = "0.1.0"
authors = ["oveln"]
edition = "2024"
repository = "https://github.com/Oveln/embassy_preempt"
license = "MIT OR Apache-2.0"
description = "Executor for Embassy Preempt RTOS"
readme = "README.md"

[lib]
crate-type = ["rlib"]

# ==================================================================
# DEPENDENCIES
# ==================================================================
[dependencies]
cortex-m = { version = "0.7" }
cortex-m-rt = { version = "0.7", features = ["device"] }
critical-section = { version = "1.1", features = ["restore-state-bool"] }

lazy_static = {version = "1.5.0", features = ["spin_no_std"]}

spin = "0.10.0"

# Embassy Preempt Log
embassy-preempt-log = { path = "../embassy-preempt-log"}
defmt = { version = "1.0.1", optional = true }
panic-probe = { version = "1.0.0", features = ["print-defmt"], optional = true }

# Embassy Preempt struct
embassy-preempt-structs = { path = "../embassy-preempt-structs" }

# 暂时
embassy_preempt = { path = "../../embassy_preempt"}

[dependencies.spinning_top]
version = "0.2.5"
optional = true

[features]
default = [
    "logs",
    "cortex_m",
    "OS_PRIO_LESS_THAN_64",
    "OS_MEM_EN",
    "OS_ARG_CHK_EN",
    "OS_TIME_GET_SET_EN",
    "OS_TASK_CREATE_EXT_EN",
    "OS_TASK_REG_TBL_SIZE",
]

logs = ["log-os", "log-task", "log-mem", "log-timer", "log-scheduler"]
log-base = ["embassy-preempt-log/log-base", "dep:defmt", "dep:panic-probe","embassy_preempt/log-base"]
log-os = ["log-base", "embassy-preempt-log/log-os","embassy_preempt/log-os"]
log-task = ["log-base", "embassy-preempt-log/log-task","embassy_preempt/log-task"]
log-mem = ["log-base", "embassy-preempt-log/log-mem","embassy_preempt/log-mem"]
log-timer = ["log-base", "embassy-preempt-log/log-timer","embassy_preempt/log-timer"]
log-scheduler = ["log-base", "embassy-preempt-log/log-scheduler","embassy_preempt/log-scheduler"]

cortex_m = []
delay_idle = []

OS_EVENT_EN = []        ## this feature will be set in build.rs
OS_EVENT_NAME_EN = []       ## this feature will be set in build.rs
OS_SCHED_LOCK_EN = []
OS_TIME_DLY_HMSM_EN = []
OS_TASK_CHANGE_PRIO_EN = []
OS_TASK_DEL_EN = []
OS_PRIO_LESS_THAN_64 = []
OS_PRIO_LESS_THAN_256 = []
OS_MEM_EN = []
OS_MAX_MEM_PART_EN = []
OS_MBOX_EN = []
OS_TASK_STAT_EN = []
OS_MEM_NAME_EN = []
OS_MUTEX_EN = []
OS_Q_EN = []
OS_SEM_EN = []
OS_TASK_CREATE_EXT_EN = []
OS_TASK_PROFILE_EN = []
OS_TASK_NAME_EN = []
OS_SAFETY_CRITICAL = []
OS_ARG_CHK_EN = []      ## Enable (1) or Disable (0) argument checking
OS_MAX_QS = []
OS_TASK_REG_TBL_SIZE = []
OS_TASK_STAT_STK_CHK_EN = []
OS_MAX_MEM_PART=[]
OS_FLAG_EN=[]
OS_MAX_FLAGS=[]
OS_TMR_EN=[]
OS_CPU_HOOKS_EN=[]
OS_DEBUG_EN=[]
OS_TIME_GET_SET_EN=[]
OS_SAFETY_CRITICAL_IEC61508=[]
OS_STACK_LESS_THAN_64=[]
OS_STACK_LESS_THAN_256=[]
OS_EVENT_MULTI_EN=[]

# Spin lock support
use_spin = ["spinning_top"]