[package]
name = "embassy-preempt-executor"
version = "0.1.0"
authors = ["oveln"]
edition = "2024"
repository = "https://github.com/Oveln/embassy_preempt"
license = "MIT OR Apache-2.0"
description = "Executor for Embassy Preempt RTOS"
readme = "README.md"

[lib]
crate-type = ["rlib"]

# ==================================================================
# DEPENDENCIES
# ==================================================================
[dependencies]
cortex-m = { version = "0.7" }
cortex-m-rt = { version = "0.7", features = ["device"] }
stm32-metapac = { git = "https://github.com/embassy-rs/stm32-data-generated", tag = "stm32-data-e0cfd165fd8fffaa0df66a35eeca83b228496645", features = ["metadata", "stm32f401re"]}

critical-section = { version = "1.1", features = ["restore-state-bool"] }

lazy_static = {version = "1.5.0", features = ["spin_no_std"]}

spin = "0.10.0"

# Embassy Preempt Log
embassy-preempt-log = { path = "../embassy-preempt-log"}
defmt = { version = "1.0.1", optional = true }
panic-probe = { version = "1.0.0", features = ["print-defmt"], optional = true }

# Embassy Preempt struct
embassy-preempt-structs = { path = "../embassy-preempt-structs" }

# Embassy Preempt CFG
embassy-preempt-cfg = { path = "../embassy-preempt-cfg" }

# Embassy Preempt Mem
embassy-preempt-mem = { path = "../embassy-preempt-mem" }

# Embassy Preempt Driver
embassy-preempt-driver = { path = "../embassy-preempt-driver", features = ["stm32f401re"] }

# 暂时
embassy-preempt-port = { path = "../embassy-preempt-port" }

[dependencies.spinning_top]
version = "0.3.0"
optional = true

[features]
default = [
    "cortex_m",
    "OS_PRIO_LESS_THAN_64",
    "OS_MEM_EN",
    "OS_ARG_CHK_EN",
    "OS_TIME_GET_SET_EN",
    "OS_TASK_CREATE_EXT_EN",
    "OS_TASK_REG_TBL_SIZE",
    "OS_TASK_NAME_EN"
]

logs = ["log-os", "log-task", "log-mem", "log-timer", "log-scheduler"]
log-base = ["embassy-preempt-log/log-base", "dep:defmt", "dep:panic-probe"]
log-os = ["log-base", "embassy-preempt-log/log-os", "embassy-preempt-port/log-os"]
log-task = ["log-base", "embassy-preempt-log/log-task", "embassy-preempt-port/log-task"]
log-mem = ["log-base", "embassy-preempt-log/log-mem", "embassy-preempt-port/log-mem", "embassy-preempt-mem/log-mem"]
log-timer = ["log-base", "embassy-preempt-log/log-timer", "embassy-preempt-port/log-timer"]
log-scheduler = ["log-base", "embassy-preempt-log/log-scheduler", "embassy-preempt-port/log-scheduler"]

cortex_m = []
delay_idle = []

OS_EVENT_EN = []        ## this feature will be set in build.rs
OS_EVENT_NAME_EN = []       ## this feature will be set in build.rs
OS_SCHED_LOCK_EN = []
OS_TIME_DLY_HMSM_EN = []
OS_TASK_CHANGE_PRIO_EN = []
OS_TASK_DEL_EN = []
OS_PRIO_LESS_THAN_64 = ["embassy-preempt-cfg/OS_PRIO_LESS_THAN_64"]
OS_PRIO_LESS_THAN_256 = ["embassy-preempt-cfg/OS_PRIO_LESS_THAN_256"]
OS_MEM_EN = []
OS_MAX_MEM_PART_EN = []
OS_MBOX_EN = []
OS_TASK_STAT_EN = []
OS_MEM_NAME_EN = []
OS_MUTEX_EN = []
OS_Q_EN = []
OS_SEM_EN = []
OS_TASK_CREATE_EXT_EN = []
OS_TASK_PROFILE_EN = []
OS_TASK_NAME_EN = []
OS_SAFETY_CRITICAL = []
OS_ARG_CHK_EN = []      ## Enable (1) or Disable (0) argument checking
OS_MAX_QS = []
OS_TASK_REG_TBL_SIZE = ["embassy-preempt-cfg/OS_TASK_REG_TBL_SIZE"]
OS_TASK_STAT_STK_CHK_EN = []
OS_MAX_MEM_PART=[]
OS_FLAG_EN=[]
OS_MAX_FLAGS=[]
OS_TMR_EN=[]
OS_CPU_HOOKS_EN=[]
OS_DEBUG_EN=[]
OS_TIME_GET_SET_EN=["embassy-preempt-cfg/OS_TIME_GET_SET_EN"]
OS_SAFETY_CRITICAL_IEC61508=[]
OS_STACK_LESS_THAN_64=[]
OS_STACK_LESS_THAN_256=[]
OS_EVENT_MULTI_EN=[]

# Spin lock support
use_spin = ["spinning_top"]