[package]
name = "embassy-preempt-macros"
version = "0.1.0"
edition = "2021"
description = "Procedural macros for Embassy Preempt RTOS"
repository = "https://github.com/Oveln/embassy_preempt"
license = "MIT OR Apache-2.0"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }

[target.'cfg(target_arch = "arm")'.dependencies]
cortex-m-rt = "0.7"

[target.'cfg(target_arch = "riscv32")'.dependencies]
# QingKe is RISC-V based, so we include qingke-rt for RISC-V targets
qingke-rt = { version = "0.5.0", optional = true }

[features]
qingke = ["dep:qingke-rt"]