[package]
name = "embassy-preempt-mem"
version = "0.1.0"
authors = ["oveln"]
edition = "2024"
repository = "https://github.com/Oveln/embassy_preempt"
license = "MIT OR Apache-2.0"
description = "Memory management for Embassy Preempt RTOS"
readme = "README.md"

[lib]
crate-type = ["rlib"]

# ==================================================================
# DEPENDENCIES
# ==================================================================
[dependencies]
critical-section = { version = "1.1", features = ["restore-state-bool"] }

spin = "0.10.0"

# Embassy Preempt Log
embassy-preempt-log = { path = "../embassy-preempt-log"}

# Embassy Preempt struct
embassy-preempt-structs = { path = "../embassy-preempt-structs" }

# Embassy Preempt CFG
embassy-preempt-cfg = { path = "../embassy-preempt-cfg" }

# Embassy Preempt Platform - 平台抽象层（包含timer驱动）
embassy-preempt-platform = { path = "../embassy-preempt-platform" }

[dependencies.spinning_top]
version = "0.3.0"
optional = true

[features]
default = [
    "cortex_m",
    "OS_PRIO_LESS_THAN_64",
    "OS_MEM_EN",
    "OS_ARG_CHK_EN",
    "OS_MEM_NAME_EN"
]

cortex_m = []

OS_PRIO_LESS_THAN_64 = ["embassy-preempt-cfg/OS_PRIO_LESS_THAN_64"]
OS_PRIO_LESS_THAN_256 = ["embassy-preempt-cfg/OS_PRIO_LESS_THAN_256"]
OS_MEM_EN = []
OS_MAX_MEM_PART_EN = []
OS_MEM_NAME_EN = []
OS_SAFETY_CRITICAL = []
OS_ARG_CHK_EN = []
OS_MAX_MEM_PART=[]
OS_SAFETY_CRITICAL_IEC61508=[]
OS_STACK_LESS_THAN_64=[]
OS_STACK_LESS_THAN_256=[]

# Spin lock support
use_spin = ["spinning_top"]