[package]
name = "embassy-preempt-platform"
version = "0.1.0"
edition = "2021"
authors = ["oveln"]
description = "Platform abstraction layer for embassy_preempt RTOS"
license = "MIT OR Apache-2.0"

[lib]
name = "embassy_preempt_platform"
path = "src/lib.rs"
crate-type = ["rlib"]  # Rust库类型

[dependencies]
spin = { version = "0.10.0" }
defmt = { version = "1.0.1", optional = true }
panic-probe = { version = "1.0.0", features = ["print-defmt"], optional = true }
embassy-preempt-log ={ path = "../embassy-preempt-log"}

embassy-preempt-cfg = { path = "../embassy-preempt-cfg" }

cortex-m = { version = "0.7.7", optional = true, default-features = false }
cortex-m-rt = { version = "0.7", optional = true }
cortex-m-semihosting = { version = "0.5", optional = true }
critical-section = { version = "1.1", features = ["restore-state-bool"] }
stm32-metapac = { git = "https://github.com/embassy-rs/stm32-data-generated", tag = "stm32-data-e0cfd165fd8fffaa0df66a35eeca83b228496645", optional = true, features = ["metadata"] }

# Sync primitives for timer driver
# embassy-sync = { version = "0.6", optional = true }
embedded-hal = "1.0"
nb = "1"

[dependencies.stm32f4xx-hal]
version = "0.23.0"
features = ["stm32f401"]
default-features = false
optional = true

[features]
default = ["cortex-m", "stm32f401re", "time_driver_tim3", 'semihosting']

# Platform implementations
cortex-m = ["dep:cortex-m", "dep:cortex-m-semihosting"]
# stm32f401re = ["dep:stm32f4xx-hal", "cortex-m"]
stm32f401re = ["dep:stm32f4xx-hal","dep:stm32-metapac", "cortex-m", "stm32-metapac/stm32f401re"]
riscv = []  # Placeholder for future RISC-V support

# Time driver options for different timers
time_driver_tim1 = []
time_driver_tim2 = []
time_driver_tim3 = []
time_driver_tim4 = []
time_driver_tim5 = []
time_driver_tim8 = []
time_driver_tim9 = []
time_driver_tim12 = []

# Early debug support
early_debug_gpio = []

logs = ["log-os", "log-task", "log-mem", "log-timer", "log-scheduler"]
log-base = ["embassy-preempt-log/log-base", "dep:defmt", "dep:panic-probe"]
log-os = ["log-base", "embassy-preempt-log/log-os"]
log-task = ["log-base", "embassy-preempt-log/log-task"]
log-mem = ["log-base", "embassy-preempt-log/log-mem"]
log-timer = ["log-base", "embassy-preempt-log/log-timer"]
log-scheduler = ["log-base", "embassy-preempt-log/log-scheduler"]
semihosting = ["dep:cortex-m-semihosting", "dep:cortex-m-rt"]

# critical_section_cortex_m = ["coretx-m/ritical-section-single-core"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(loom)'] }
