[package]
name = "embassy-preempt-platform"
version = "0.1.0"
edition = "2021"
authors = ["oveln"]
description = "Platform abstraction layer for embassy_preempt RTOS"
license = "MIT OR Apache-2.0"

[lib]
name = "embassy_preempt_platform"
path = "src/lib.rs"
crate-type = ["rlib"]             # Rust库类型

[dependencies]
# Core dependencies (platform-agnostic)
portable-atomic ={ version = "1.11.1"}
spin = { version = "0.10.0" }
embedded-hal = "1.0"
nb = "1"
critical-section = { version = "1.1", features = ["restore-state-bool"] }
embassy-preempt-cfg = { path = "../embassy-preempt-cfg" }

embassy-preempt-log = { path = "../embassy-preempt-log" }

# ARM Cortex-M dependencies
cortex-m = { version = "0.7.7", optional = true, default-features = false }
cortex-m-rt = { version = "0.7", optional = true }
cortex-m-semihosting = { version = "0.5", optional = true }
defmt = { version = "1.0.1", optional = true }
panic-probe = { version = "1.0.0", features = ["print-defmt"], optional = true }

# STM32 support (ARM-specific)
stm32-metapac = { git = "https://github.com/embassy-rs/stm32-data-generated", tag = "stm32-data-e0cfd165fd8fffaa0df66a35eeca83b228496645", optional = true, features = [
    "metadata",
] }

# RISC-V dependencies
riscv = { version = "0.15.0", optional = true, default-features = false }
riscv-rt = { version = "0.16.0", optional = true }

# Qingke dependencies
qingke = { version = "0.5.0", optional = true , features = ["unsafe-trust-wch-atomics"]}
qingke-rt = { version = "0.5.0", optional = true}


panic-halt = { version = "1.0.0" }

# Platform-specific HALs
[dependencies.stm32f4xx-hal]
version = "0.23.0"
features = ["stm32f401"]
default-features = false
optional = true

[features]
default = []

# ===== PLATFORM ARCHITECTURES =====

memory-x = []

# ARM architecture support
arm = []
cortex-m = ["arm", "dep:cortex-m", "dep:panic-probe", "dep:defmt"]
cortex-m4 = ["cortex-m"]
cortex-m7 = ["cortex-m"]

# Semihosting (ARM only)
semihosting = ["cortex-m", "dep:cortex-m-semihosting", "dep:cortex-m-rt"]

# RISC-V architecture support
riscv = ["dep:riscv", "dep:riscv-rt"]
riscv32 = ["riscv"]
riscv64 = ["riscv"]

qingke = ["dep:qingke", "dep:qingke-rt", "spin/portable-atomic", "portable-atomic/critical-section"]

# ===== ARM CORTEX-M PLATFORMS =====

# STM32F4xx series
stm32f4xx = ["cortex-m", "dep:stm32-metapac", "semihosting"]
stm32f401re = [
    "stm32f4xx",
    "dep:stm32f4xx-hal",
    "stm32-metapac/stm32f401re",
    # "semihosting",
]


# ===== Qingke CORTEX-M PLATFORMS =====

ch32v307 = [
    "qingke"
]

# ===== TIMER DRIVERS =====

# ARM Cortex-M Timer drivers
time_driver_tim1 = []
time_driver_tim2 = []
time_driver_tim3 = []
time_driver_tim4 = []
time_driver_tim5 = []
time_driver_tim8 = []
time_driver_tim9 = []
time_driver_tim12 = []

# ===== DEBUG AND LOGGING =====

# Early debug support
early_debug_gpio = []

# Platform-specific debugging
riscv_debug = [] # For RISC-V debug adapters

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(loom)',
    'cfg(arm)',
    'cfg(riscv)',
    'cfg(riscv32)',
    'cfg(riscv64)',
] }
